--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.9.0
 Django==5.2.4
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+dotenv==0.9.9
 gunicorn==23.0.0
 packaging==25.0
 psycopg2-binary==2.9.10
+python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
 whitenoise==6.9.0
