--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.16.0
 dotenv==0.9.9
 gunicorn==23.0.0
 packaging==25.0
+pillow==11.3.0
 psycopg2-binary==2.9.10
 python-dotenv==1.1.1
 sqlparse==0.5.3
